--- a/Capybara go!/index.html
+++ b/Capybara go!/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="script.js"></script>
     <!-- div voor het beginscherm (knop met start, uitleg van de bewegingstoetsen en het verhaallijn)-->
-     <!--div voor de settings (geluid aanpassen, opnieuw beginnen of stoppen)-->
-     <!--div voor de game over scherm (opnieuw button en je score enhighscore staat gedisplayed in de div)-->
+     <!--div voor de settings (geluid aanpassen, opnieuw beginnen, controls)-->
+     <!--div voor de game over scherm (opnieuw button en je score en highscore staat gedisplayed in de div)-->
 </body>
 </html>
