--- a/Capybara go!/index.html
+++ b/Capybara go!/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <canvas></canvas>
     <script src="script.js"></script>
     <!-- div voor het beginscherm (knop met start, uitleg van de bewegingstoetsen en het verhaallijn)-->
      <!--div voor de settings (geluid aanpassen, opnieuw beginnen, controls)-->
